--- a/package.json
+++ b/package.json
@@ -9,6 +9,16 @@
   "module": "dist/vue-2-datepicker.esm.js",
   "unpkg": "dist/vue-2-datepicker.min.js",
   "types": "vue-2-datepicker.d.ts",
+  "scripts": {
+    "//": "openssl-legacy-provider is for those using NodeJS 18+ and being backward compatible",
+    "serve": "cross-env NODE_OPTIONS=--openssl-legacy-provider vue-cli-service serve dev/serve.ts --port 8085 --open",
+    "dev": "yarn serve",
+    "build": "cross-env NODE_ENV=production rollup --config build/rollup.config.js",
+    "build:ssr": "cross-env NODE_OPTIONS=--openssl-legacy-provider NODE_ENV=production rollup --config build/rollup.config.js --format cjs",
+    "build:es": "cross-env NODE_OPTIONS=--openssl-legacy-provider NODE_ENV=production rollup --config build/rollup.config.js --format es",
+    "build:unpkg": "cross-env NODE_OPTIONS=--openssl-legacy-provider NODE_ENV=production rollup --config build/rollup.config.js --format iife",
+    "test": "jest --config test/unit/jest.conf.js --coverage"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/kunukn/vue-2-datepicker.git"
@@ -26,19 +36,13 @@
     "date-picker"
   ],
   "sideEffects": false,
-  "scripts": {
-    "//": "openssl-legacy-provider is for those using NodeJS 18+ and being backward compatible",
-    "serve": "cross-env NODE_OPTIONS=--openssl-legacy-provider vue-cli-service serve dev/serve.ts --port 8085 --open",
-    "dev": "yarn serve",
-    "build": "cross-env NODE_ENV=production rollup --config build/rollup.config.js",
-    "build:ssr": "cross-env NODE_OPTIONS=--openssl-legacy-provider NODE_ENV=production rollup --config build/rollup.config.js --format cjs",
-    "build:es": "cross-env NODE_OPTIONS=--openssl-legacy-provider NODE_ENV=production rollup --config build/rollup.config.js --format es",
-    "build:unpkg": "cross-env NODE_OPTIONS=--openssl-legacy-provider NODE_ENV=production rollup --config build/rollup.config.js --format iife",
-    "test": "jest --config test/unit/jest.conf.js --coverage"
-  },
   "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.22.5",
+    "@babel/eslint-parser": "^7.22.5",
+    "@babel/plugin-external-helpers": "^7.22.5",
+    "@babel/plugin-transform-modules-commonjs": "^7.22.5",
+    "@babel/plugin-transform-runtime": "^7.22.5",
     "@babel/preset-env": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
     "@rollup/plugin-alias": "^5.0.0",
@@ -46,15 +50,19 @@
     "@rollup/plugin-commonjs": "^25.0.2",
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@rollup/plugin-replace": "^5.0.2",
+    "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@typescript-eslint/parser": "^5.60.0",
     "@vue/babel-preset-app": "^5.0.8",
     "@vue/cli-plugin-babel": "^5.0.8",
     "@vue/cli-plugin-typescript": "^5.0.8",
     "@vue/cli-service": "^5.0.8",
+    "@vue/test-utils": "^2.4.0",
+    "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^29.5.0",
-    "babel-loader": "^9.1.2",
     "babel-plugin-module-resolver": "^5.0.0",
+    "core-js": "^3.31.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
@@ -63,6 +71,7 @@
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "jest-junit": "^16.0.0",
+    "jest-serializer-vue": "^3.1.0",
     "jest-transform-stub": "^2.0.0",
     "jest-trx-results-processor": "^3.0.2",
     "minimist": "^1.2.8",
@@ -77,8 +86,12 @@
     "stylelint-config-recommended-vue": "^1.4.0",
     "stylelint-config-standard": "^33.0.0",
     "stylelint-config-standard-scss": "^9.0.0",
+    "ts-jest": "^29.1.0",
+    "ts-loader": "^9.4.3",
+    "ts-node": "^10.9.1",
     "typescript": "^5.1.3",
     "vue": "^2.6.14",
+    "vue-jest": "^3.0.7",
     "vue-template-compiler": "^2.7.14"
   },
   "peerDependencies": {
@@ -87,5 +100,10 @@
   "engines": {
     "node": ">=16",
     "npm": ">=7"
+  },
+  "jest-junit": {
+    "suiteNameTemplate": "{filepath}",
+    "outputDirectory": ".",
+    "outputName": "junit.xml"
   }
 }
