--- a/package.json
+++ b/package.json
@@ -38,13 +38,17 @@
   "sideEffects": false,
   "dependencies": {},
   "devDependencies": {
+    "@babel/cli": "^7.22.5",
     "@babel/core": "^7.22.5",
     "@babel/eslint-parser": "^7.22.5",
     "@babel/plugin-external-helpers": "^7.22.5",
     "@babel/plugin-transform-modules-commonjs": "^7.22.5",
     "@babel/plugin-transform-runtime": "^7.22.5",
     "@babel/preset-env": "^7.22.5",
+    "@babel/preset-stage-2": "^7.8.3",
     "@babel/preset-typescript": "^7.22.5",
+    "@babel/register": "^7.22.5",
+    "@babel/runtime": "^7.22.5",
     "@rollup/plugin-alias": "^5.0.0",
     "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-commonjs": "^25.0.2",
@@ -63,6 +67,7 @@
     "babel-jest": "^29.5.0",
     "babel-plugin-module-resolver": "^5.0.0",
     "core-js": "^3.31.0",
+    "coveralls": "^3.1.1",
     "cross-env": "^7.0.3",
     "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
@@ -89,7 +94,7 @@
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.3",
+    "typescript": "^4.9.5",
     "vue": "^2.6.14",
     "vue-jest": "^3.0.7",
     "vue-template-compiler": "^2.7.14"
