--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@babel/preset-typescript": "^7.22.5",
     "@babel/register": "^7.22.5",
     "@babel/runtime": "^7.22.5",
+    "@babel/runtime-corejs3": "^7.22.5",
     "@rollup/plugin-alias": "^5.0.0",
     "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-commonjs": "^25.0.2",
