--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-2-datepicker",
+  "name": "@kunukn/vue-2-datepicker",
   "private": false,
   "version": "0.0.1",
   "type": "module",
