--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   },
   "license": "MIT",
   "files": [
-    "dist/*"
+    "dist/*",
+    "src/locale/*"
   ],
   "dependencies": {},
   "devDependencies": {
