--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@kunukn/vue-2-datepicker",
   "private": false,
-  "version": "0.0.6",
+  "version": "0.0.7",
   "type": "module",
   "main": "./dist/vue-datepicker.umd.cjs",
   "module": "./dist/vue-datepicker.js",
@@ -24,9 +24,9 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "preview": "vite preview",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "lint:css": "stylelint \"{assets/styles/**/*.scss,components/**/*.vue/**/*.vue}\" --config .stylelintrc.js",
-    "lint:css-cache": "stylelint \"{components/**/*.vue/**/*.vue}\" --config .stylelintrc.js --cache",
+    "lint:es": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "lint:style": "stylelint \"{src/components/**/*.vue}\"",
+    "lint": "concurrently \"yarn lint:es\" \"yarn lint:css\"",
     "test": "vitest --environment jsdom --root src/"
   },
   "license": "MIT",
@@ -36,15 +36,18 @@
   ],
   "dependencies": {},
   "devDependencies": {
-    "cross-env": "^7.0.3",
     "@rushstack/eslint-patch": "^1.3.2",
     "@types/jsdom": "^20.0.1",
     "@types/node": "^18.16.18",
+    "@typescript-eslint/eslint-plugin": "^5.60.0",
+    "@typescript-eslint/parser": "^5.60.0",
     "@vitest/coverage-c8": "^0.32.2",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/test-utils": "^1.3.6",
     "@vue/tsconfig": "^0.1.3",
     "@vue/vue2-jest": "^29.2.4",
+    "concurrently": "^8.2.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
     "jest": "^29.5.0",
@@ -53,10 +56,14 @@
     "jest-transform-stub": "^2.0.0",
     "jest-trx-results-processor": "^3.0.2",
     "jsdom": "^21.1.0",
-    "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "sass": "^1.63.4",
     "sass-loader": "^10.4.1",
+    "stylelint": "^15.8.0",
+    "stylelint-config-prettier": "^9.0.5",
+    "stylelint-config-recommended-vue": "^1.4.0",
+    "stylelint-config-standard": "^33.0.0",
+    "stylelint-config-standard-scss": "^7.0.1",
     "ts-jest": "^29.1.0",
     "ts-loader": "^8.4.0",
     "ts-node": "^10.9.1",
