--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "preview": "vite preview",
     "lint:es": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "lint:style": "stylelint \"{src/components/**/*.vue}\"",
+    "lint:style": "stylelint \"src/**/*.vue\"",
     "lint": "concurrently \"yarn lint:es\" \"yarn lint:css\"",
     "test": "vitest --environment jsdom --root src/"
   },
@@ -60,6 +60,9 @@
     "sass": "^1.63.4",
     "sass-loader": "^10.4.1",
     "stylelint": "^15.8.0",
+    "postcss": "^8.4.24",
+    "postcss-html": "^1.5.0",
+    "postcss-nesting": ">=10",
     "stylelint-config-prettier": "^9.0.5",
     "stylelint-config-recommended-vue": "^1.4.0",
     "stylelint-config-standard": "^33.0.0",
