--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "preview": "vite preview",
     "lint:es": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "lint:style": "stylelint \"src/**/*.vue\"",
-    "lint": "concurrently \"yarn lint:es\" \"yarn lint:css\"",
-    "test": "vitest --environment jsdom --root src/"
+    "lint": "concurrently \"yarn lint:es\" \"yarn lint:style\"",
+    "test": "vitest --environment jsdom --root src/",
+    "validate": "concurrently \"yarn lint\" \"yarn test\""
+
   },
   "license": "MIT",
   "files": [
