--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "preview": "vite preview",
     "lint:es": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "lint:style": "stylelint \"src/**/*.vue\"",
+    "lint:style": "stylelint \"{src/**/*.vue,src/assets/**/*.scss}\"",
     "lint": "concurrently \"yarn lint:es\" \"yarn lint:style\"",
     "test": "vitest --environment jsdom --root src/",
     "validate": "concurrently \"yarn lint\" \"yarn test\""
