--- a/package.json
+++ b/package.json
@@ -37,38 +37,40 @@
     "src/locale/*"
   ],
   "dependencies": {},
+  "//devDependencies": {
+    "@vue/test-utils": "version 1 is for Vue 2"
+  },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.3.2",
     "@types/jsdom": "^20.0.1",
-    "@types/node": "^18.16.18",
-    "@typescript-eslint/eslint-plugin": "^5.60.0",
-    "@typescript-eslint/parser": "^5.60.0",
+    "@types/node": "^20.3.2",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
     "@vitest/coverage-c8": "^0.32.2",
-    "@vue/eslint-config-prettier": "^7.0.0",
+    "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/test-utils": "^1.3.6",
     "@vue/tsconfig": "^0.1.3",
     "@vue/vue2-jest": "^29.2.4",
     "concurrently": "^8.2.0",
     "cross-env": "^7.0.3",
-    "eslint": "^8.22.0",
-    "eslint-plugin-vue": "^9.3.0",
+    "eslint": "^8.43.0",
+    "eslint-plugin-vue": "^9.15.1",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "jest-junit": "^16.0.0",
     "jest-transform-stub": "^2.0.0",
     "jest-trx-results-processor": "^3.0.2",
-    "jsdom": "^21.1.0",
-    "prettier": "^2.7.1",
-    "sass": "^1.63.4",
+    "jsdom": "^22.1.0",
+    "prettier": "^2.8.8",
+    "sass": "^1.63.6",
     "sass-loader": "^10.4.1",
-    "stylelint": "^15.8.0",
+    "stylelint": "^15.9.0",
     "postcss": "^8.4.24",
     "postcss-html": "^1.5.0",
-    "postcss-nesting": ">=10",
+    "postcss-nesting": "^11.3.0",
     "stylelint-config-prettier": "^9.0.5",
     "stylelint-config-recommended-vue": "^1.4.0",
     "stylelint-config-standard": "^33.0.0",
-    "stylelint-config-standard-scss": "^7.0.1",
+    "stylelint-config-standard-scss": "^9.0.0",
     "ts-jest": "^29.1.0",
     "ts-loader": "^8.4.0",
     "ts-node": "^10.9.1",
@@ -80,7 +82,7 @@
     "vue-jest": "^3.0.7",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
-    "vue-tsc": "^1.8.1"
+    "vue-tsc": "^1.8.3"
   },
   "peerDependencies": {
     "vue": "^2"
