--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@vue/vue2-jest": "^29.2.4",
     "concurrently": "^8.2.0",
     "cross-env": "^7.0.3",
+    "dayjs": "^1.11.8",
     "eslint": "^8.43.0",
     "eslint-plugin-vue": "^9.15.1",
     "jest": "^29.5.0",
@@ -69,13 +70,13 @@
     "jest-transform-stub": "^2.0.0",
     "jest-trx-results-processor": "^3.0.2",
     "jsdom": "^22.1.0",
+    "postcss": "^8.4.24",
+    "postcss-html": "^1.5.0",
+    "postcss-nesting": "^11.3.0",
     "prettier": "^2.8.8",
     "sass": "^1.63.6",
     "sass-loader": "^13.3.2",
     "stylelint": "^15.9.0",
-    "postcss": "^8.4.24",
-    "postcss-html": "^1.5.0",
-    "postcss-nesting": "^11.3.0",
     "stylelint-config-prettier": "^9.0.5",
     "stylelint-config-recommended-vue": "^1.4.0",
     "stylelint-config-standard": "^33.0.0",
