--- a/package.json
+++ b/package.json
@@ -51,48 +51,49 @@
   },
   "devDependencies": {
     "@types/jsdom": "^20.0.1",
-    "@types/node": "^20.3.2",
-    "@typescript-eslint/eslint-plugin": "^5.60.1",
-    "@typescript-eslint/parser": "^5.60.1",
-    "@vitest/coverage-c8": "^0.32.2",
+    "@types/node": "^20.4.1",
+    "@typescript-eslint/eslint-plugin": "^5.61.0",
+    "@typescript-eslint/parser": "^5.61.0",
+    "@vitest/coverage-c8": "^0.33.0",
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/test-utils": "^1.3.6",
     "@vue/tsconfig": "^0.4.0",
     "@vue/vue2-jest": "^29.2.4",
     "concurrently": "^8.2.0",
     "cross-env": "^7.0.3",
-    "dayjs": "^1.11.8",
-    "eslint": "^8.43.0",
+    "dayjs": "^1.11.9",
+    "eslint": "^8.44.0",
+    "eslint-plugin-prettier": "^5.0.0-alpha.1",
     "eslint-plugin-vue": "^9.15.1",
-    "jest": "^29.5.0",
-    "jest-environment-jsdom": "^29.5.0",
+    "jest": "^29.6.1",
+    "jest-environment-jsdom": "^29.6.1",
     "jest-junit": "^16.0.0",
     "jest-transform-stub": "^2.0.0",
     "jest-trx-results-processor": "^3.0.2",
     "jsdom": "^22.1.0",
-    "postcss": "^8.4.24",
+    "postcss": "^8.4.25",
     "postcss-html": "^1.5.0",
     "postcss-nesting": "^11.3.0",
-    "prettier": "^2.8.8",
+    "prettier": "^3.0.0",
     "sass": "^1.63.6",
     "sass-loader": "^13.3.2",
-    "stylelint": "^15.9.0",
+    "stylelint": "^15.10.1",
     "stylelint-config-prettier": "^9.0.5",
     "stylelint-config-recommended-vue": "^1.4.0",
-    "stylelint-config-standard": "^33.0.0",
+    "stylelint-config-standard": "^34.0.0",
     "stylelint-config-standard-scss": "^10.0.0",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.4.4",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
-    "vite": "^4.3.9",
+    "vite": "^4.4.2",
     "vite-plugin-vue2": "^2.0.3",
-    "vitest": "^0.32.2",
+    "vitest": "^0.33.0",
     "vue": "2.6.14",
     "vue-jest": "^3.0.7",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
-    "vue-tsc": "^1.8.3"
+    "vue-tsc": "^1.8.4"
   },
   "peerDependencies": {
     "vue": "^2"
