--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "cross-env": "^7.0.3",
     "dayjs": "^1.11.9",
     "eslint": "^8.44.0",
-    "eslint-plugin-prettier": "^5.0.0-alpha.1",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.15.1",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
@@ -84,7 +84,7 @@
     "postcss": "^8.4.25",
     "postcss-html": "^1.5.0",
     "postcss-nesting": "^12.0.0",
-    "prettier": "^3.0.0",
+    "prettier": "^2.8.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.63.6",
