--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "jest-transform-stub": "^2.0.0",
     "jest-trx-results-processor": "^3.0.2",
     "jsdom": "^22.1.0",
+    "lodash.pick": "^4.4.0",
     "postcss": "^8.4.25",
     "postcss-html": "^1.5.0",
     "postcss-nesting": "^12.0.0",
