--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "validate": "concurrently \"yarn lint\" \"yarn test\"",
     "storybook": "storybook dev -p 6006",
     "story": "storybook dev -p 6008",
-    "build-storybook": "storybook build",
-    "deploy-storybook": "cross-env NODE_DEBUG=gh-pages gh-pages -d storybook-static"
+    "build-storybook": "storybook build && node post-storybook-build.js",
+    "deploy-storybook": "cross-env NODE_DEBUG=gh-pages gh-pages -d ./storybook-static -t true"
   },
   "license": "MIT",
   "files": [
